--- a/Jenkins/build
+++ b/Jenkins/build
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    environment {
+        NODE_ENV = 'production'
+    }
+
     stages {
         stage('Cleanup') {
             steps {
@@ -15,6 +19,12 @@ pipeline {
         }
 
         stage('Build Backend') {
+            agent {
+                docker {
+                    image 'maven:3.9.6-eclipse-temurin-17'
+                    args '-v /root/.m2:/root/.m2' // Optional Maven cache
+                }
+            }
             steps {
                 dir('backend') {
                     sh 'mvn clean package'
@@ -23,6 +33,11 @@ pipeline {
         }
 
         stage('Build Frontend') {
+            agent {
+                docker {
+                    image 'node:20'
+                }
+            }
             steps {
                 dir('frontend') {
                     sh 'npm install'
