--- a/Jenkins/build
+++ b/Jenkins/build
@@ -15,6 +15,12 @@ pipeline {
         }
 
         stage('Build Backend') {
+            agent {
+                docker {
+                    image 'maven:3.9.6-eclipse-temurin-17'
+                    args '-v /root/.m2:/root/.m2'
+                }
+            }
             steps {
                 dir('backend') {
                     sh 'mvn clean package'
@@ -23,6 +29,11 @@ pipeline {
         }
 
         stage('Build Frontend') {
+            agent {
+                docker {
+                    image 'node:20'
+                }
+            }
             steps {
                 dir('frontend') {
                     sh 'npm install'
