--- a/Jenkins/build
+++ b/Jenkins/build
@@ -15,29 +15,26 @@ pipeline {
         }
 
         stage('Build Backend') {
-            agent {
-                docker {
-                    image 'maven:3.9.6-eclipse-temurin-17'
-                    args '-v /root/.m2:/root/.m2'
-                }
-            }
             steps {
                 dir('backend') {
-                    sh 'mvn clean package'
+                    script {
+                        docker.image('maven:3.9.6-eclipse-temurin-17').inside('-v $HOME/.m2:/root/.m2') {
+                            sh 'mvn clean package'
+                        }
+                    }
                 }
             }
         }
 
         stage('Build Frontend') {
-            agent {
-                docker {
-                    image 'node:20'
-                }
-            }
             steps {
                 dir('frontend') {
-                    sh 'npm install'
-                    sh 'npm run build'
+                    script {
+                        docker.image('node:20').inside {
+                            sh 'npm install'
+                            sh 'npm run build'
+                        }
+                    }
                 }
             }
         }
