--- a/Jenkins/build
+++ b/Jenkins/build
@@ -46,4 +46,13 @@ pipeline {
             }
         }
     }
+
+    post {
+        success {
+            echo 'Build completed successfully!'
+        }
+        failure {
+            echo 'Build failed! Check the logs above for details.'
+        }
+    }
 }
